[gd_scene load_steps=101 format=3 uid="uid://bmfwcnto3unei"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_iiw7g"]
[ext_resource type="Texture2D" uid="uid://dffu5qde78qs1" path="res://assets/player/idle.png" id="1_mvn7p"]
[ext_resource type="Texture2D" uid="uid://bekpa30sy3l48" path="res://assets/player/jump.png" id="2_8bmmi"]
[ext_resource type="Texture2D" uid="uid://jxwc6g6t5m4w" path="res://assets/player/walk.png" id="3_81l4t"]
[ext_resource type="Texture2D" uid="uid://bgfais52wtold" path="res://assets/player/damage.png" id="3_rj3ll"]
[ext_resource type="PackedScene" uid="uid://dbcmk4ubcae0j" path="res://scenes/hit_box.tscn" id="5_kv0gg"]
[ext_resource type="PackedScene" uid="uid://bmfmwiaylejnh" path="res://scenes/hurt_box.tscn" id="6_eorm3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ia7qr"]
atlas = ExtResource("2_8bmmi")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8vw7"]
atlas = ExtResource("2_8bmmi")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksfc5"]
atlas = ExtResource("2_8bmmi")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ch3c"]
atlas = ExtResource("2_8bmmi")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcm32"]
atlas = ExtResource("2_8bmmi")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxukv"]
atlas = ExtResource("2_8bmmi")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wvxp"]
atlas = ExtResource("2_8bmmi")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_syxfx"]
atlas = ExtResource("2_8bmmi")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3qjv"]
atlas = ExtResource("2_8bmmi")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2sua"]
atlas = ExtResource("2_8bmmi")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4xac"]
atlas = ExtResource("2_8bmmi")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3osm"]
atlas = ExtResource("2_8bmmi")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0ntj"]
atlas = ExtResource("2_8bmmi")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_krn0l"]
atlas = ExtResource("2_8bmmi")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfckp"]
atlas = ExtResource("2_8bmmi")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6vsj"]
atlas = ExtResource("2_8bmmi")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_girkj"]
atlas = ExtResource("2_8bmmi")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ict7"]
atlas = ExtResource("2_8bmmi")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3aqp"]
atlas = ExtResource("2_8bmmi")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyvbf"]
atlas = ExtResource("2_8bmmi")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vox0"]
atlas = ExtResource("2_8bmmi")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kol8x"]
atlas = ExtResource("2_8bmmi")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwgaa"]
atlas = ExtResource("2_8bmmi")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4ka3"]
atlas = ExtResource("2_8bmmi")
region = Rect2(400, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b8ud"]
atlas = ExtResource("3_rj3ll")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3m7b"]
atlas = ExtResource("3_rj3ll")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f15sj"]
atlas = ExtResource("3_rj3ll")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgn50"]
atlas = ExtResource("3_rj3ll")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_be4mr"]
atlas = ExtResource("3_rj3ll")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4opf"]
atlas = ExtResource("3_rj3ll")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxk1y"]
atlas = ExtResource("3_rj3ll")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fr4x"]
atlas = ExtResource("3_rj3ll")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki6op"]
atlas = ExtResource("3_rj3ll")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tjw7"]
atlas = ExtResource("3_rj3ll")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_035rg"]
atlas = ExtResource("3_rj3ll")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q4ib"]
atlas = ExtResource("3_rj3ll")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p3il"]
atlas = ExtResource("3_rj3ll")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uubrf"]
atlas = ExtResource("3_rj3ll")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lok2g"]
atlas = ExtResource("3_rj3ll")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_smkw0"]
atlas = ExtResource("3_rj3ll")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h48w8"]
atlas = ExtResource("1_mvn7p")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo0tj"]
atlas = ExtResource("1_mvn7p")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukkev"]
atlas = ExtResource("1_mvn7p")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w02b4"]
atlas = ExtResource("1_mvn7p")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cschg"]
atlas = ExtResource("1_mvn7p")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3x6g"]
atlas = ExtResource("1_mvn7p")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqlte"]
atlas = ExtResource("1_mvn7p")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_awcl5"]
atlas = ExtResource("1_mvn7p")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx7py"]
atlas = ExtResource("1_mvn7p")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujsa0"]
atlas = ExtResource("1_mvn7p")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqvsl"]
atlas = ExtResource("1_mvn7p")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wuk6"]
atlas = ExtResource("1_mvn7p")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci0jq"]
atlas = ExtResource("1_mvn7p")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5yvi"]
atlas = ExtResource("1_mvn7p")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifpsc"]
atlas = ExtResource("1_mvn7p")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwh22"]
atlas = ExtResource("1_mvn7p")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_22y8c"]
atlas = ExtResource("3_81l4t")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqkvd"]
atlas = ExtResource("3_81l4t")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5achd"]
atlas = ExtResource("3_81l4t")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl1wo"]
atlas = ExtResource("3_81l4t")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_synfa"]
atlas = ExtResource("3_81l4t")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci60i"]
atlas = ExtResource("3_81l4t")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpch7"]
atlas = ExtResource("3_81l4t")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aryn"]
atlas = ExtResource("3_81l4t")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tjqg"]
atlas = ExtResource("3_81l4t")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsfd7"]
atlas = ExtResource("3_81l4t")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rab5n"]
atlas = ExtResource("3_81l4t")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ccf2"]
atlas = ExtResource("3_81l4t")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcaqj"]
atlas = ExtResource("3_81l4t")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_eanxb"]
atlas = ExtResource("3_81l4t")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_07sjv"]
atlas = ExtResource("3_81l4t")
region = Rect2(480, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_163ji"]
atlas = ExtResource("3_81l4t")
region = Rect2(560, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c02ei"]
atlas = ExtResource("3_81l4t")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_piy47"]
atlas = ExtResource("3_81l4t")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4k5e"]
atlas = ExtResource("3_81l4t")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqc8w"]
atlas = ExtResource("3_81l4t")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_63bs3"]
atlas = ExtResource("3_81l4t")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv606"]
atlas = ExtResource("3_81l4t")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fttdp"]
atlas = ExtResource("3_81l4t")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tgpa"]
atlas = ExtResource("3_81l4t")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7heq"]
atlas = ExtResource("3_81l4t")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pahfw"]
atlas = ExtResource("3_81l4t")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_or314"]
atlas = ExtResource("3_81l4t")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvqut"]
atlas = ExtResource("3_81l4t")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdc57"]
atlas = ExtResource("3_81l4t")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1olmy"]
atlas = ExtResource("3_81l4t")
region = Rect2(400, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7pyh"]
atlas = ExtResource("3_81l4t")
region = Rect2(480, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdvhp"]
atlas = ExtResource("3_81l4t")
region = Rect2(560, 240, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_5s766"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia7qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8vw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksfc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ch3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcm32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxukv")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wvxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syxfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3qjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2sua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4xac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3osm")
}],
"loop": false,
"name": &"attack_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0ntj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krn0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfckp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6vsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_girkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ict7")
}],
"loop": false,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3aqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyvbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vox0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kol8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwgaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4ka3")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b8ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3m7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f15sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgn50")
}],
"loop": false,
"name": &"hurt_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_be4mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4opf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxk1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fr4x")
}],
"loop": false,
"name": &"hurt_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki6op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tjw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_035rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q4ib")
}],
"loop": false,
"name": &"hurt_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p3il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uubrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lok2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smkw0")
}],
"loop": false,
"name": &"hurt_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h48w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo0tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukkev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w02b4")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cschg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3x6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqlte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awcl5")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx7py")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujsa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqvsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wuk6")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci0jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5yvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifpsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwh22")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22y8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqkvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5achd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl1wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_synfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci60i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpch7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aryn")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tjqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsfd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rab5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ccf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcaqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eanxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07sjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_163ji")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c02ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piy47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4k5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqc8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63bs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv606")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fttdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tgpa")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7heq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pahfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or314")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvqut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdc57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1olmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7pyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdvhp")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl5sb"]
size = Vector2(7, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyhx4"]
size = Vector2(48, 77.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iq3jp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_se7ai"]
radius = 4.0
height = 12.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animated_sprite")]
collision_layer = 17
script = ExtResource("1_iiw7g")
animated_sprite = NodePath("AnimatedSprite")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.5, -7)
sprite_frames = SubResource("SpriteFrames_5s766")
animation = &"hurt_up"
autoplay = "idle_down"

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_bl5sb")

[node name="EnemyHighlightZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="EnemyHighlightZone"]
position = Vector2(0, 38.75)
shape = SubResource("RectangleShape2D_tyhx4")

[node name="HitBox" parent="." node_paths=PackedStringArray("collision_shape") instance=ExtResource("5_kv0gg")]
collision_mask = 0
collision_shape = NodePath("HitCollisionShape")

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 20)
shape = SubResource("CapsuleShape2D_iq3jp")
disabled = true

[node name="HurtBox" parent="." node_paths=PackedStringArray("collision_shape") instance=ExtResource("6_eorm3")]
collision_layer = 0
collision_mask = 32
collision_shape = NodePath("HurtCollisionShape")

[node name="HurtCollisionShape" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_se7ai")

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="body_entered" from="EnemyHighlightZone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="EnemyHighlightZone" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HitBox"]
